fix: CORS - inject source directly into security chain and use lambda-based config to avoid path matching issues